# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

executable("main") {
  sources = [ "main.cc" ]
  # lib_dirs = [ "/usr/lib" ]
  # libs = [ "ssl", "crypto" ]

  # include_dirs = ["/usr/include/openssl"]
  deps = [
    "//hello/:hello_lib",
    "//sion/:sion_lib",
  ]
}

# group("hello_group") {
#   deps = [
#     "//hello/:hello_lib",
#   ]
# }

